--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ a[x-apple-data-detectors] {
                       <td align="center" style="padding:0;Margin:0;padding-top:25px;padding-bottom:25px"><h3 style="Margin:0;line-height:29px;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-size:24px;font-style:normal;font-weight:bold;color:#333333">R$ 7,00 Acesso PREMIUM + 12 MESES de acesso com TODAS as ATUALIZAÇÕES do curso.</h3></td> 
                      </tr> 
                      <tr style="border-collapse:collapse"> 
-                      <td align="center" style="Margin:0;padding-left:10px;padding-right:10px;padding-top:15px;padding-bottom:20px"><span class="es-button-border" style="border-style:solid;border-color:transparent;background:#ed8e20;border-width:0px;display:inline-block;border-radius:5px;width:auto"><a href="https://clkdmg.site/checkout/games-q" class="es-button es-button-1" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#ffffff;font-size:18px;border-style:solid;border-color:#ed8e20;border-width:15px 30px;display:inline-block;background:#ed8e20;border-radius:5px;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center">Comprar agora</a></span></td> 
+                      <td align="center" style="Margin:0;padding-left:10px;padding-right:10px;padding-top:15px;padding-bottom:20px"><span class="es-button-border" style="border-style:solid;border-color:transparent;background:#ed8e20;border-width:0px;display:inline-block;border-radius:5px;width:auto"><a href="javascript:window.location=loadUTMFromURL();" class="es-button es-button-1" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#ffffff;font-size:18px;border-style:solid;border-color:#ed8e20;border-width:15px 30px;display:inline-block;background:#ed8e20;border-radius:5px;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center">Comprar agora</a></span></td> 
                      </tr>
                    </table></td> 
                  </tr> 
@@ -242,6 +242,18 @@ a[x-apple-data-detectors] {
        </table></td> 
      </tr> 
    </table> 
-  </div>  
+  </div>
+	<script>
+		function loadUTMFromURL() {
+			const queryString = window.location.search;
+      			const urlParams = new URLSearchParams(queryString);
+			const utmSource = urlParams.get('utm_source');
+			const utmCampaing = urlParams.get('utm_campaing');
+			const utmTerm = urlParams.get('utm_term');
+			const utmMedium = urlParams.get('utm_medium');
+			const utmContent = urlParams.get('utm_content');
+			return `https://clkdmg.site/checkout/games-q?utm_source=${utmSource}&utm_campaing=${utmCampaing}&utm_term=${utmTerm}&utm_medium=${utmMedium}&utm_content=${utmContent}`;
+		}
+	</script> 
  </body>
 </html>
