--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ a[x-apple-data-detectors] {
 			const utmTerm = urlParams.get('utm_term');
 			const utmMedium = urlParams.get('utm_medium');
 			const utmContent = urlParams.get('utm_content');
-			return `https://clkdmg.site/checkout/games-q?utm_source=${utmSource}&utm_campaing=${utmCampaing}&utm_term=${utmTerm}&utm_medium=${utmMedium}&utm_content=${utmContent}`;
+			return `https://clkdmg.site/checkout/games-q?utm_source=${utmSource}&utm_term=${utmTerm}&utm_medium=${utmMedium}&utm_content=${utmContent}&utm_campaing=${utmCampaing}`;
 		}
 		function RedirectURL()
 		{
