--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@ a[x-apple-data-detectors] {
 			const queryString = window.location.search;
       			const urlParams = new URLSearchParams(queryString);
 			const utmSource = urlParams.get('utm_source');
-			const utmCampaing = urlParams.get('utm_campaing');
+			const utmCampaign = urlParams.get('utm_campaign');
 			const utmTerm = urlParams.get('utm_term');
 			const utmMedium = urlParams.get('utm_medium');
 			const utmContent = urlParams.get('utm_content');
-			return `https://clkdmg.site/checkout/games-q?utm_source=${utmSource}&utm_term=${utmTerm}&utm_medium=${utmMedium}&utm_content=${utmContent}&utm_campaing=${utmCampaing}`;
+			return `https://clkdmg.site/checkout/games-q?utm_source=${utmSource}&utm_term=${utmTerm}&utm_medium=${utmMedium}&utm_content=${utmContent}&utm_campaign=${utmCampaign}`;
 		}
 		function RedirectURL()
 		{
