--- a/index.html
+++ b/index.html
@@ -258,6 +258,19 @@ a[x-apple-data-detectors] {
 		{
 		    window.location= loadUTMFromURL();
 		}
-	</script> 
+	</script>
+	 <!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/653acbb9f2439e1631e8d264/1hdmqnjum';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+<!--End of Tawk.to Script-->
  </body>
 </html>
