--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@ End Google Tag Manager (noscript) -->
 		{
 		    window.location= loadUTMFromURL();
 		}
+	</script>
 
 		<!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -282,8 +283,6 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
-<!--End of Tawk.to Script-->
-	
 <!--End of Tawk.to Script-->
  </body>
 </html>
